syntax = "proto3";

option go_package = "pb";

message SSTableBlock {
  repeated SSTableKeyValue data = 1;
}

message SSTableKeyValue {
  string key = 1;
  bytes value = 2;
}

message SSTableIndex {
  repeated SSTableIndexEntry data = 1;
}

message SSTableIndexEntry {
  string start_key = 1;
  string end_key = 2;
  uint64 offset = 3;
  uint64 size = 4;
}